--- a/index.html
+++ b/index.html
@@ -40,6 +40,23 @@
         </div>
     </header>
     <main>
+        <div class="item-containers">
+            <div class="item-container">
+                <img src="Images/1.jpg" alt="item image">
+                <div class="rating">
+                    4.3⭐ │ 1.2k
+                </div>
+                <div class="company-name">Carlton London</div>
+                <div class="product-name">Rhodium - Plated CZ Floral Studs</div>
+                <div class="pricing">
+                    <div class="discounted-price"></div>
+                    <div class="original-price"></div>
+                    <div class="discount"></div>
+                </div>
+            </div>
+
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footer_container">
