--- a/index.html
+++ b/index.html
@@ -40,67 +40,67 @@
         </div>
     </header>
     <main>
-        <div class="item-containers">
+        <div class="items-container">
             <div class="item-container">
-                <img src="Images/1.jpg" alt="item image">
+                <img class="item-image" src="Images/1.webp" alt="item image">
                 <div class="rating">
                     4.3⭐ │ 1.2k
                 </div>
-                <div class="company-name">Carlton London</div>
-                <div class="product-name">Rhodium - Plated CZ Floral Studs</div>
+                <div class="company-name">ADIDAS</div>
+                <div class="product-name">Kids Gametalker 1.0 Run Shoes</div>
                 <div class="pricing">
-                    <div class="discounted-price"></div>
-                    <div class="original-price"></div>
-                    <div class="discount"></div>
+                    <span class="discounted-price">Rs 1849</span>
+                    <span class="original-price">Rs 3699</span>
+                    <span class="discount">50% OFF</span>
+                </div>
+                <button class="bag-button">Add to bag</button>
+            </div>
+
+            
+        </div>
+    </main>
+  <footer>
+        <div class="footer_container">
+
+            <div class="footer_column">
+                <h3>ONLINE SHOPPING</h3>
+                <a href="#">Men</a>
+                <a href="#">Women</a>
+                <a href="#">Kids</a>
+                <a href="#">Beauty</a>
+                <a href="#">Home & Living</a>
+                <a href="#">Giftcard</a>
+                <a href="#">Myntra Insider</a>
+            </div>
+
+            <div class="footer_column">
+                <h3>CUSTOMER POLICIES</h3>
+                <a href="#">Contact Us</a>
+                <a href="#">FAQ</a>
+                <a href="#">T&C</a>
+                <a href="#">Terms Of Use</a>
+                <a href="#">User Orders</a>
+                <a href="#">Shippings</a>
+                <a href="#">Cancelation</a>
+                <a href="#">Returns</a>
+                <a href="#">Priavacy Policy</a>
+            </div>
+
+            <div class="footer_column">
+                <h3>EXPERIENCE MYNTRA APP ON MOBILE</h3>
+                <div class="download_link"> <img class="apple" src="Images/appstore.png" alt="">
+                    <img class="android" src="Images/playstore.png" alt="">
                 </div>
             </div>
 
-            </div>
+
+
+
+
         </div>
-    </main>
-    <footer>
-        <div class="footer_container">
-            <div class="footer_column">
-                <h3>ONLINE SHOPPING</h3>
-
-                <a href="#">Men</a>
-                <a href="#">Women</a>
-                <a href="#">Kids</a>
-                <a href="#">Home & Living</a>
-                <a href="#">Beauty</a>
-                <a href="#">Gift Card</a>
-                <a href="#">Myntra Insider</a>
-            </div>
-
-            <div class="footer_column">
-                <h3>ONLINE SHOPPING</h3>
-
-                <a href="#">Men</a>
-                <a href="#">Women</a>
-                <a href="#">Kids</a>
-                <a href="#">Home & Living</a>
-                <a href="#">Beauty</a>
-                <a href="#">Gift Card</a>
-                <a href="#">Myntra Insider</a>
-            </div>
-
-            <div class="footer_column">
-                <h3>ONLINE SHOPPING</h3>
-
-                <a href="#">Men</a>
-                <a href="#">Women</a>
-                <a href="#">Kids</a>
-                <a href="#">Home & Living</a>
-                <a href="#">Beauty</a>
-                <a href="#">Gift Card</a>
-                <a href="#">Myntra Insider</a>
-            </div>
-        </div>
-        <hr>
-
-        <div class="copyright">
-            © 2023 www.myntra.com. All rights reserved.
-        </div>
+        <br>
+        <div class="copyright">@2025 Samarth Jalkote. All Rights Reserved</div>
     </footer>
 </body>
+
 </html>
