--- a/index.html
+++ b/index.html
@@ -41,22 +41,7 @@
     </header>
     <main>
         <div class="items-container">
-            <div class="item-container">
-                <img class="item-image" src="Images/1.webp" alt="item image">
-                <div class="rating">
-                    4.3⭐ │ 1.2k
-                </div>
-                <div class="company-name">ADIDAS</div>
-                <div class="product-name">Kids Gametalker 1.0 Run Shoes</div>
-                <div class="pricing">
-                    <span class="discounted-price">Rs 1849</span>
-                    <span class="original-price">Rs 3699</span>
-                    <span class="discount">50% OFF</span>
-                </div>
-                <button class="bag-button">Add to bag</button>
-            </div>
-
-            
+           
         </div>
     </main>
   <footer>
@@ -99,8 +84,9 @@
 
         </div>
         <br>
-        <div class="copyright">@2025 Samarth Jalkote. All Rights Reserved</div>
+        <div class="copyright">©2025 Samarth Jalkote. All Rights Reserved</div>
     </footer>
+<script src="Data/item.js"></script>
+<script src="scripts/index.js"> </script>
 </body>
-
 </html>
